# expense-tracker

./: .gitignore  duckdb_sql_cheatsheet.md  pyproject.toml
.streamlit/: config.toml
src/expense_tracker/: __init__.py  transactions.py  ui.py
